--- a/ms-java-dashboard/pom.xml
+++ b/ms-java-dashboard/pom.xml
@@ -43,7 +43,12 @@
 			    <artifactId>mysql-connector-java</artifactId>
 			    <version>8.0.11</version>
 			</dependency>
-			        
+			
+			<!-- ........  For Logging Information....... -->
+			<dependency>
+		         <groupId>org.springframework.boot</groupId>
+		        <artifactId>spring-boot-starter-log4j2</artifactId>
+           </dependency>        
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
