--- a/ms-java-dashboard/src/main/resources/application.properties
+++ b/ms-java-dashboard/src/main/resources/application.properties
@@ -10,4 +10,12 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto =update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+ #  Logging...................................
+#output to a temp_folder/file
+logging.file=${java.io.tmpdir}/application.log
  
+# Logging pattern for the console
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+ 
+# Logging pattern for file
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
